--- a/Сайт.html
+++ b/Сайт.html
@@ -29,8 +29,15 @@ font:italic;
 <div class="layer1">Текст который отпраляет и получает пользователь.</div>
 <input type="text" size="100">
 <p style="margin-left:100px;">Авторизация</p>
-<p>Логин:  <input type="text" size="30"></p>
-<p>Пароль: <input type="text" size="30"></p>
+<div class="input-form">
+	<input type="text" placeholder="Логин">
+</div>
+<div class="input-form">
+	<input type="password" placeholder="Пароль">
+</div>
+<div class="input-form">
+	<input type="submit" value="Проверка">
+</div>
  
  
 </body>
