--- a/Сайт.html
+++ b/Сайт.html
@@ -25,20 +25,60 @@ font:italic;
 </style>
 </head>
 <body>
-<h1>Сайт для чата</h1>
-<div class="layer1">Текст который отпраляет и получает пользователь.</div>
-<input type="text" size="100">
-<p style="margin-left:100px;">Авторизация</p>
-<div class="input-form">
-	<input type="text" placeholder="Логин">
-</div>
-<div class="input-form">
-	<input type="password" placeholder="Пароль">
-</div>
-<div class="input-form">
-	<input type="submit" value="Проверка">
-</div>
- 
- 
+<form action="action_page.php">
+
+  <div class="container">
+    <label for="uname"><b>Логин</b></label>
+    <input id="nm" type="text" placeholder="Enter Username"/>
+
+    <label for="psw"><b>Пароль</b></label>
+    <input id="ps" type="password" placeholder="Enter"/>
+	
+    
+  </div>
+</form>
+
+<button onClick = "clickFuntion()">Проверка</button>
+
+<p id="player"></p>
+
+<script>
+function clickFuntion (){
+	var namme=nm.value;
+	var passo=ps.value;
+
+	if((namme=="1") && (passo=="1")){
+	document.getElementById("player").innerHTML ="Вы вошли под пользователем 1";	
+	}else if((namme=="2") && (passo=="2")){
+	document.getElementById("player").innerHTML ="Вы вошли под пользователем 2";
+	}else{
+	document.getElementById("player").innerHTML ="Вы не авторизованы";
+	}	
+} 
+</script>
+
+
+<textarea it="texter"placeholder ="Напишите" ></textarea>
+<button onClick = "clickFuntion2()">Отправить</button>
+<script>
+function clickFuntion2 (){
+	var namme=nm.value;
+	var passo=ps.value;
+	if((namme=="1") && (passo=="1")){
+	document.getElementById("ttext").innerHTML ="Сообщение написано пользователем 1: ";
+	
+	}else if((namme=="2") && (passo=="2")){
+	document.getElementById("ttext").innerHTML ="Сообщение написано пользователем 2: ";
+
+	}else{
+	document.getElementById("ttext").innerHTML ="Ошибка";
+	}	
+} 
+</script>
+<p id="ttext"></p>
+
 </body>
 </html>
+
+
+
