--- a/Сайт(Тест вывод информации пользователя и его сохранение).html
+++ b/Сайт(Тест вывод информации пользователя и его сохранение).html
@@ -1,4 +1,5 @@
 <!DOCTYPE html PUBLIC"-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -57,9 +58,17 @@ function clickFuntion (){
 } 
 </script>
 
+<?php
+$inputName = 'texter';
+$file=fopen('myfile.txt','a');
+fputs($file, $_POST[$inputName]);
+?>
+<form action="index.php" method="post">
+<input type=text id="texter" name="<?php echo($inputName);?>">
+<button type='submit'>Отправить</button>
+</form>
 
-<input it="texter" placeholder ="Напишите" />
-<button onClick = "clickFuntion2()">Отправить</button>
+  
 <script>
 function clickFuntion2 (){
 	var namme=nm.value;
@@ -72,18 +81,15 @@ function clickFuntion2 (){
 
 	}else{
 	document.getElementById("ttext").innerHTML ="Ошибка";
-	};	
-	let a = document.getElementById("texter").value;
-	document.getElementById("out").innerHTML = a;
-		
+	}	
 } 
 </script>
-
 <p id="ttext"></p>
-<div id="out"></div>
+
+
+<?php echo file_get_contents('myfile.txt') ?>
+
 
 </body>
 </html>
-
-
 
